fix: update execution count and installation logs in getting started notebook

--- a/docs/tutorials/getting-started.ipynb
+++ b/docs/tutorials/getting-started.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1cc9619b",
    "metadata": {
     "tags": [
@@ -149,7 +149,26 @@
       "    Found existing installation: lacuna 0.0.1.dev322\n",
       "    Uninstalling lacuna-0.0.1.dev322:\n",
       "      Successfully uninstalled lacuna-0.0.1.dev322\n",
-      "Successfully installed lacuna-0.0.1.dev324\n"
+      "Successfully installed lacuna-0.0.1.dev324\n",
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: \\ \n",
+      "Warning: 2 possible package resolutions (only showing differing packages):\n",
+      "  - mrtrix3/linux-64::mrtrix3-3.0.3-h2bc3f7f_0\n",
+      "  - MRtrix3/linux-64::mrtrix3-3.0.3-h2bc3f7fdone\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "  current version: 4.11.0\n",
+      "  latest version: 26.1.0\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n"
      ]
     }
    ],
