fix: update getting started tutorial with new command descriptions and execution counts

--- a/docs/tutorials/getting-started.ipynb
+++ b/docs/tutorials/getting-started.ipynb
@@ -214,6 +214,7 @@
     "```\n",
     "lacuna\n",
     "└─bidsify   # Transform your directory of masks in a BIDS-compliant dataset Lacuna can work with\n",
+    "└─fetch     # Download and fetch connectomes for network mapping analyses\n",
     "└─run       # Run analyses\n",
     "  └─rd      # Run regional damage analysis\n",
     "  └─fnm     # Run functional network mapping\n",
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "0ad40972",
    "metadata": {},
    "outputs": [
@@ -239,7 +240,7 @@
      "text": [
       "usage: lacuna [-h] [--version] <command> ...\n",
       "\n",
-      "Lacuna v0.0.1.dev314\n",
+      "Lacuna v0.0.1.dev324\n",
       "\n",
       "options:\n",
       "  -h, --help  show this help message and exit\n",
@@ -284,16 +285,16 @@
    "metadata": {},
    "source": [
     "## Get the tutorial data\n",
-    "Let's begin by loading the synthetic BIDS dataset included in Lacuna. This dataset is structured specifically for this demonstration and contains lesion masks in the required MNI space.\n",
+    "Let's begin by loading the synthetic lesion dataset included in Lacuna. This dataset is structured specifically for this demonstration and contains lesion masks in the required MNI space.\n",
     "\n",
-    "Lacuna simplifies analysis by managing coordinate spaces for you. It supports both MNI152NLin6Asym and MNI152NLin2009cAsym. Instead of requiring you to manually register your lesions, atlases, and connectomes to a single space, Lacuna uses [TemplateFlow](https://www.templateflow.org/) to handle these transformations internally. You only need to define the input space of your lesion masks; the toolbox ensures all other data is brought into alignment automatically.\n",
+    "Lacuna simplifies analysis by managing coordinate spaces for you. It supports both MNI152NLin6Asym and MNI152NLin2009cAsym. Instead of requiring you to manually register your lesions, atlases, and connectomes to a single space, Lacuna uses [TemplateFlow](https://www.templateflow.org/) to handle these transformations internally. You only need to transform your lesion mask data to one of the two supported MNI spaces and define it in the commands; the toolbox ensures all other data is brought into alignment automatically.\n",
     "\n",
     "Let's copy the data to a temporary directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c66ceeae",
    "metadata": {},
    "outputs": [
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "63101937",
    "metadata": {},
    "outputs": [
@@ -345,17 +346,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "id": "28ebeb37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays._slicers.OrthoSlicer at 0x7f7e28e4f5b0>"
+       "<nilearn.plotting.displays._slicers.OrthoSlicer at 0x7f761a826680>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "cc0fe012",
    "metadata": {},
    "outputs": [
@@ -458,47 +459,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "id": "e891c0d4",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_output"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2026-01-20 14:31:53 - lacuna.cli.main - INFO - Lacuna CLI starting\n",
-      "2026-01-20 14:31:53 - lacuna.cli.main - INFO - Input: /tmp/tutorial_data\n",
-      "2026-01-20 14:31:53 - lacuna.cli.main - INFO - Output directory: /tmp/outputs\n",
-      "2026-01-20 14:31:53 - lacuna.cli.main - INFO - Analysis: rd\n",
-      "2026-01-20 14:31:53 - lacuna.cli.main - INFO - Running analysis: RegionalDamage\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - \n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - ============================================================\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - DISCOVERY SUMMARY\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - ============================================================\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO -   Total mask images: 3\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO -   Unique subjects:   3\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO -   Unique sessions:   1\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO -   Labels:            acuteinfarct\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - ============================================================\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - \n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - Masks to process:\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO -     1. sub-01/ses-01/acuteinfarct\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO -     2. sub-02/ses-01/acuteinfarct\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO -     3. sub-03/ses-01/acuteinfarct\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - \n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - Batch processing: 3 masks in batches of 3\n",
-      "2026-01-20 14:31:54 - lacuna.cli.main - INFO - \n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - Lacuna CLI starting\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - Input: /tmp/tutorial_data\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - Output directory: /tmp/outputs\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - Analysis: rd\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - Running analysis: RegionalDamage\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - \n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - ============================================================\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - DISCOVERY SUMMARY\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - ============================================================\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO -   Total mask images: 3\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO -   Unique subjects:   3\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO -   Unique sessions:   1\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO -   Labels:            acuteinfarct\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - ============================================================\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - \n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - Masks to process:\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO -     1. sub-01/ses-01/acuteinfarct\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO -     2. sub-02/ses-01/acuteinfarct\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO -     3. sub-03/ses-01/acuteinfarct\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - \n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - Batch processing: 3 masks in batches of 3\n",
+      "2026-02-03 11:17:44 - lacuna.cli.main - INFO - \n",
       "─── RegionalDamage ───\n",
-      "RegionalDamage:   0%|                                   | 0/3 [00:00<?, ?mask/s]2026-01-20 14:31:54 - lacuna.analysis - INFO - Aggregating 1 source(s) across 1 atlas(es): Schaefer2018_100Parcels7Networks\n",
-      "2026-01-20 14:31:55 - lacuna.analysis - INFO - Aggregation complete (1 results)\n",
-      "RegionalDamage:  33%|█████████                  | 1/3 [00:01<00:03,  1.64s/mask]2026-01-20 14:31:55 - lacuna.analysis - INFO - Aggregating 1 source(s) across 1 atlas(es): Schaefer2018_100Parcels7Networks\n",
-      "2026-01-20 14:31:57 - lacuna.analysis - INFO - Aggregation complete (1 results)\n",
-      "RegionalDamage:  67%|██████████████████         | 2/3 [00:03<00:01,  1.63s/mask]2026-01-20 14:31:57 - lacuna.analysis - INFO - Aggregating 1 source(s) across 1 atlas(es): Schaefer2018_100Parcels7Networks\n",
-      "2026-01-20 14:31:58 - lacuna.analysis - INFO - Aggregation complete (1 results)\n",
-      "RegionalDamage: 100%|███████████████████████████| 3/3 [00:04<00:00,  1.64s/mask]\n",
-      "2026-01-20 14:31:59 - lacuna.cli.main - INFO - Successfully processed 3 subject(s)\n",
-      "2026-01-20 14:31:59 - lacuna.cli.main - INFO - Results saved to: /tmp/outputs\n",
-      "2026-01-20 14:31:59 - lacuna.cli.main - INFO - Lacuna CLI completed successfully\n"
+      "RegionalDamage:   0%|                                   | 0/3 [00:00<?, ?mask/s]2026-02-03 11:17:44 - lacuna.analysis - INFO - Aggregating 1 source(s) across 1 atlas(es): Schaefer2018_100Parcels7Networks\n",
+      "2026-02-03 11:17:46 - lacuna.analysis - INFO - Aggregation complete (1 results)\n",
+      "RegionalDamage:  33%|█████████                  | 1/3 [00:01<00:03,  1.69s/mask]2026-02-03 11:17:46 - lacuna.analysis - INFO - Aggregating 1 source(s) across 1 atlas(es): Schaefer2018_100Parcels7Networks\n",
+      "2026-02-03 11:17:47 - lacuna.analysis - INFO - Aggregation complete (1 results)\n",
+      "RegionalDamage:  67%|██████████████████         | 2/3 [00:03<00:01,  1.65s/mask]2026-02-03 11:17:47 - lacuna.analysis - INFO - Aggregating 1 source(s) across 1 atlas(es): Schaefer2018_100Parcels7Networks\n",
+      "2026-02-03 11:17:49 - lacuna.analysis - INFO - Aggregation complete (1 results)\n",
+      "RegionalDamage: 100%|███████████████████████████| 3/3 [00:04<00:00,  1.66s/mask]\n",
+      "2026-02-03 11:17:49 - lacuna.cli.main - INFO - Successfully processed 3 subject(s)\n",
+      "2026-02-03 11:17:49 - lacuna.cli.main - INFO - Results saved to: /tmp/outputs\n",
+      "2026-02-03 11:17:49 - lacuna.cli.main - INFO - Lacuna CLI completed successfully\n"
      ]
     }
    ],
@@ -521,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "id": "16af7809",
    "metadata": {},
    "outputs": [
@@ -539,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "id": "5d8c15be",
    "metadata": {},
    "outputs": [
@@ -563,12 +568,12 @@
    "id": "4fe928af",
    "metadata": {},
    "source": [
-    "We load and visualize the output file with pandas"
+    "We can load and visualize the output file with pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "id": "a22fbe9b",
    "metadata": {},
    "outputs": [
@@ -592,7 +597,7 @@
          "type": "float"
         }
        ],
-       "ref": "6b947462-6931-4591-b72e-306486be01ae",
+       "ref": "09c5f3f5-ec4a-4721-92da-9e2e6b3a20d7",
        "rows": [
         [
          "54",
@@ -742,7 +747,7 @@
        "2               7Networks_LH_Vis_3   0.577883"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,12 +765,12 @@
    "id": "768f0e5b",
    "metadata": {},
    "source": [
-    "Schaefer area RH Vis 5 has an overlap of 63% with the lesion. Let's check that visually by plotting the atlas parcel.  "
+    "Schaefer area RH Vis 5 has the highest overlap with the lesion (63%). Let's check that visually by plotting the atlas parcel.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "id": "a48744d1",
    "metadata": {},
    "outputs": [
@@ -779,10 +784,10 @@
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays._slicers.OrthoSlicer at 0x7f7de9bb29e0>"
+       "<nilearn.plotting.displays._slicers.OrthoSlicer at 0x7f7618eb0820>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -835,19 +840,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "id": "964fe803",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/marvin/mount/hdd8tb/CSI_MVCI/lacuna/src/lacuna/cli/main.py:278: UserWarning: No valid data for 'group_atlas-schaefer2018_desc-100parcels7networks_source-inputmask_parcelstats': 1 file(s) skipped due to incompatible format. Files need 'region' and 'value' columns.\n",
-      "  created_files = aggregate_parcelstats(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!lacuna collect \\\n",
     "    /tmp/tutorial_data/ \\\n",
@@ -857,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "id": "a4d933fe",
    "metadata": {},
    "outputs": [
@@ -1381,7 +1377,7 @@
          "type": "float"
         }
        ],
-       "ref": "3cee7dae-b026-4238-bfd8-fef27bca9d76",
+       "ref": "4bff6012-090e-4a13-b90e-fc521f33ff0a",
        "rows": [
         [
          "1",
@@ -1912,7 +1908,7 @@
        "[3 rows x 102 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1979,7 +1975,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "83b6fbb8",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_output"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2011,10 +2011,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55500513",
+   "metadata": {},
+   "source": [
+    "Then we run the analysis. \n",
+    "\n",
+    "What the structural network mapping implementation internally does \n",
+    "1. Ensure space alignment\n",
+    "2. Compute the voxel-level tract density image (TDI) of full tractogram (amount of streamlines per voxel)\n",
+    "3. Filter the normative tractogram by the lesion mask\n",
+    "4. Compute the TDI of the lesion filtered tractogram and divide the lesion TDI by the original TDI to obtain a disconnection map (% of streamlines connected to the lesion)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4be1412d",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_output"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2068,6 +2086,14 @@
     "    --participant-label 01 \\\n",
     "    --mask-space MNI152NLin6Asym \\\n",
     "    --verbose"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4d7adc3",
+   "metadata": {},
+   "source": [
+    "Again, we look at the outputs."
    ]
   },
   {
@@ -2151,14 +2177,18 @@
     "\n",
     "As before we need to obtain a functional connectome. Lacuna facilitates to download the [GSP1000 dataset](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/ILXIKS) which is openly available and the current field standard. Again, you have to get an access token. For this register on [Harvard Dataverse](https://dataverse.harvard.edu/), click on your username and then API Token.\n",
     "\n",
-    "Here, we will only fetch a test version of GSP1000 to keep the tutorial lightweight. The original dataset comprises ~200gb of data so you need space for that. However, the shown commands should work equally "
+    "Here, we will only fetch a test version of GSP1000 to keep the tutorial lightweight. The original dataset comprises ~200gb of data so you need space for that. However, the analysis should work equally if one removes the `--test-mode` flag. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4ff57a79",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_output"
+    ]
+   },
    "outputs": [],
    "source": [
     "!lacuna fetch gsp1000 \\\n",
@@ -2188,10 +2218,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bfc338d7",
+   "metadata": {},
+   "source": [
+    "After these preparations we run the analysis.\n",
+    "\n",
+    "The functional network mapping implementation consists of multiple steps:\n",
+    "1. Ensure space alignment.\n",
+    "2. Load timeseries (connectome subjects × timepoints × voxels) to extract lesion timeseries.\n",
+    "3. Compute voxel-wise statistics: Pearson correlations between the lesion timeseries and whole-brain timeseries, Fisher z, t-statistics, and optionally p-value maps and FDR-corrected p-values (Benjamini–Hochberg) and thresholded significance maps.\n",
+    "4. Export results as NIfTI VoxelMaps (rmap, zmap, tmap, pmap, pfdrmap, threshold masks) and optionally transform them back to the original input space.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 126,
    "id": "24173e93",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_output"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2309,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "80859916",
    "metadata": {},
    "outputs": [
@@ -2340,7 +2388,7 @@
     "\n",
     "plotting.plot_stat_map(tmap_img, \n",
     "                       radiological=True, \n",
-    "                       title=\"T-statistic map from FNМ\", \n",
+    "                       title=\"T-statistic map from FNM\",\n",
     "                       draw_cross=False, \n",
     "                       colorbar=True,\n",
     "                       cmap='seismic',\n",
@@ -2364,12 +2412,6 @@
    "source": [
     "This concludes the first analysis tutorial."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8b662ec4",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
