Refactor code structure for improved readability and maintainability

--- a/docs/tutorials/getting-started-cli.ipynb
+++ b/docs/tutorials/getting-started-cli.ipynb
@@ -5,7 +5,7 @@
    "id": "ea4fcf96",
    "metadata": {},
    "source": [
-    "# Tutorial analysis\n",
+    "# Getting started (CLI)\n",
     "\n",
     "In this tutorial, you'll install lacuna and run your first analysis.\n",
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "91f0091f",
    "metadata": {
     "tags": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2b069d5d",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lacuna 0.0.1.dev322\n"
+      "lacuna 0.0.1.dev328\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
    "source": [
     "## The Lacuna CLI\n",
     "\n",
-    "Lacuna offers the user two ways of using it via (1) the CLI and (2) via the Python API. While the Python API offers more flexibility, we will cover it in later tutorials and focus here on the CLI as it offers the most straight-forward user experience.\n",
+    "Lacuna offers the user two ways of using it via (1) the CLI and (2) via the Python API. Here we will focus on the CLI.\n",
     "\n",
     "The CLI is hierarchically structured in subcommands following a typical lesion analysis workflow.\n",
     "\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "0ad40972",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
      "text": [
       "usage: lacuna [-h] [--version] <command> ...\n",
       "\n",
-      "Lacuna v0.0.1.dev324\n",
+      "Lacuna v0.0.1.dev328\n",
       "\n",
       "options:\n",
       "  -h, --help  show this help message and exit\n",
@@ -390,8 +390,7 @@
    "id": "2aa9b08d",
    "metadata": {},
    "source": [
-    "# Regional damage analysis\n",
-    "\n",
+    "## Regional damage analysis\n",
     "The first analysis we will run quantifies the overlap of the lesion mask with a parcellation atlas. Lacuna provides direct access to the Schaefer cortical and Tian (Melbourne) subcortical atlas in different resolutions. Moreover, the HCP1065 white matter tract atlas is included. Beyond that lacuna provides functionality to load your own atlases which will be covered in a separate how-to.\n",
     "\n",
     "You can check the available atlases via the CLI"
@@ -825,17 +824,9 @@
    "id": "a385dc21",
    "metadata": {},
    "source": [
-    "Looks good."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fb997a85",
-   "metadata": {},
-   "source": [
-    "## Collect tabular data in an analysis-ready file\n",
+    "Looks good.\n",
     "\n",
-    "Next, we will use `lacuna collect` to merge the individual-level tsv-files to one so that we can use it for downstream analyses"
+    "Next, we will use `lacuna collect` to merge the individual-level tsv-files to an analysis-ready file"
    ]
   },
   {
@@ -1923,7 +1914,7 @@
    "id": "c0191f00",
    "metadata": {},
    "source": [
-    "# Structural Lesion Network Mapping\n",
+    "## Structural Lesion Network Mapping\n",
     "\n",
     "Structural lesion network mapping aims to identify the white matter fiber bundles connected to a specific lesion. By analyzing the lesion's location, we can infer which neural pathways have been disconnected or disrupted.\n",
     "\n",
@@ -2171,7 +2162,7 @@
    "id": "08991660",
    "metadata": {},
    "source": [
-    "# Functional Lesion Network Mapping\n",
+    "## Functional Lesion Network Mapping\n",
     "\n",
     "Functional Lesion Network Mapping aims to map the functional brain circuitry connecting to the lesion. This is achieved by using a normative functional connectome - a collection of resting-state functional MRIs. Based on this connectome the average functional connectivity - i.e., the Pearson correlation of BOLD timeseries - between the lesion and every voxel in the connectome space is quantified.\n",
     "\n",
